--- a/main1.html
+++ b/main1.html
@@ -10,16 +10,18 @@
 <meta name="content-language" content="tr" />
 <meta name="author" content="yakup.com">
 </head>
-
-<frameset cols="185px,*" frameborder="0">
-<frame name="main3" src="main2.html"></a>
-<frameset rows="1200px"frameborder="0">
-<frame name="main1" src="main1.html">
-</frameset>
-</frameset>
-<body>
-
-
+<style type="text/css">
+.frame1{
+    position:absolute;
+    top:-400px; 
+    left:-400px;
+    right:auto;
+    margin:400px;
+}
+</style>
+<body bgcolor="white" >
+<iframe src="yakup1.html" class="frame1" name="frame1" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" width="1700" height="2000" ></iframe></body>
 </body>
+
 
 </html>
