--- a/main2.html
+++ b/main2.html
@@ -1,11 +1,11 @@
-<html>
+ï»¿<html>
 <head>
 <title> Yakup </title>
 <meta http-equiv="refresh" content="300">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="Keywords" content="Hosting,'Alan Adı'"/>
+<meta name="Keywords" content="Hosting,'Alan AdÄ±'"/>
 <meta name="Description" content="Yakup Altun."/>
 <meta name="content-language" content="tr" />
 <meta name="author" content="yakup.com">
@@ -161,11 +161,11 @@
 			<a href="yakup1.html" target="frame1"><h2 class="text1">Sunucu</h2></a>
 			<a href="yakup2.html" target="frame1"><h2 class="text2">SSL</h2></a>
 			<a href="yakup3.html" target="frame1"><h2 class="text3">Hosting</h2></a>
-			<a href="yakup4.html" target="frame1"><h2 class="text4">Barındırma</h2></a>
-			<a href="yakup5.html" target="frame1"><h2 class="text5">Araçlar</h2></a>
+			<a href="yakup4.html" target="frame1"><h2 class="text4">BarÄ±ndÄ±rma</h2></a>
+			<a href="yakup5.html" target="frame1"><h2 class="text5">AraÃ§lar</h2></a>
 			<a href="yakup6.html" target="frame1"> <h2 class="text6">Destek</h2></a>
-			<a href="yakup7.html" target="frame1"><h2 class="text7">Ücretler</h2></a>
-			<a href="yakup8.html" target="frame1"><h2 class="text8">İletişim</h2></a>
+			<a href="yakup7.html" target="frame1"><h2 class="text7">Ãœcretler</h2></a>
+			<a href="yakup8.html" target="frame1"><h2 class="text8">Ä°letiÅŸim</h2></a>
 			<a href="yakup9.html" target="frame1"><h2 class="text9">Bilgiler</h2></a>
 		</body>
 
