--- a/yakup2.html
+++ b/yakup2.html
@@ -1,11 +1,11 @@
-<html>
+ï»¿<html>
 <head>
 <title> Yakup </title>
 <meta http-equiv="refresh" content="300">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="Keywords" content="Hosting,'Alan Adı'"/>
+<meta name="Keywords" content="Hosting,'Alan AdÄ±'"/>
 <meta name="Description" content="Yakup Altun."/>
 <meta name="content-language" content="tr" />
 <meta name="author" content="yakup.com">
@@ -15,39 +15,39 @@
 		<body bgcolor="white" background="https://i.hizliresim.com/e5kUmC.jpg">
 <center>
 <h1> SSL Nedir?</h1>
-<dd>SSL Nedir? Kısaca : SSL'in açılımı Secure Socket Layer'dır. Türkçe anlamıysa Güvenli Giriş Katmanı'dır.</dd>
-<dd>Farklı türleri olsa da en tanınmış sunucular, web sitelerinin içeriğini depolayan ve internet kullanıcılarına bu içeriği "sunarak" sitelerin yayımlanmasını sağlayan web sunucularıdır.</dd>
-<dd>SSL internet ortamında çok karşılaşılan kavramlardan biridir. Genellikle alışveriş sitelerinde oldukça sık rastlanmaktadır. SSL'in açılımı Secure Socket Layer'dır. Türkçe anlamıysa Güvenli Giriş Katmanı'dır.</dd>
-<dd>SSL kişisel gizlilik ve güvenilirlik sağlayan, network üzerindeki bilgi transferi sırasında bilginin bütünlüğü ve gizliliği (data protection) için sunucu ile istemci arasındaki iletişimin şifrelenmiş şekilde</dd>
-<dd>yapılabilmesine imkan veren bu sayede gizliliğinin ve bütünlüğün korunmasını sağlayan Netscape tarafından geliştirilmiş bir güvenlik protokolüdür diye tanımlayabiliriz.</dd><br>
+<dd>SSL Nedir? KÄ±saca : SSL'in aÃ§Ä±lÄ±mÄ± Secure Socket Layer'dÄ±r. TÃ¼rkÃ§e anlamÄ±ysa GÃ¼venli GiriÅŸ KatmanÄ±'dÄ±r.</dd>
+<dd>FarklÄ± tÃ¼rleri olsa da en tanÄ±nmÄ±ÅŸ sunucular, web sitelerinin iÃ§eriÄŸini depolayan ve internet kullanÄ±cÄ±larÄ±na bu iÃ§eriÄŸi "sunarak" sitelerin yayÄ±mlanmasÄ±nÄ± saÄŸlayan web sunucularÄ±dÄ±r.</dd>
+<dd>SSL internet ortamÄ±nda Ã§ok karÅŸÄ±laÅŸÄ±lan kavramlardan biridir. Genellikle alÄ±ÅŸveriÅŸ sitelerinde oldukÃ§a sÄ±k rastlanmaktadÄ±r. SSL'in aÃ§Ä±lÄ±mÄ± Secure Socket Layer'dÄ±r. TÃ¼rkÃ§e anlamÄ±ysa GÃ¼venli GiriÅŸ KatmanÄ±'dÄ±r.</dd>
+<dd>SSL kiÅŸisel gizlilik ve gÃ¼venilirlik saÄŸlayan, network Ã¼zerindeki bilgi transferi sÄ±rasÄ±nda bilginin bÃ¼tÃ¼nlÃ¼ÄŸÃ¼ ve gizliliÄŸi (data protection) iÃ§in sunucu ile istemci arasÄ±ndaki iletiÅŸimin ÅŸifrelenmiÅŸ ÅŸekilde</dd>
+<dd>yapÄ±labilmesine imkan veren bu sayede gizliliÄŸinin ve bÃ¼tÃ¼nlÃ¼ÄŸÃ¼n korunmasÄ±nÄ± saÄŸlayan Netscape tarafÄ±ndan geliÅŸtirilmiÅŸ bir gÃ¼venlik protokolÃ¼dÃ¼r diye tanÄ±mlayabiliriz.</dd><br>
 
-<dd>SSL protokolü bütün yaygın web sunucuları (server) ve tarayıcıları (browser) tarafından desteklenen bir protokoldür. SSL, standart bir algoritmadır. Milyonlarca web sitesinde güvenli veri iletişimi</dd>
-<dd>için kullanılmaktadır. SSL fonksiyonun çalışabilmesi için sunucu tarafında bir anahtar (private key) ve istemci tarafında çalışacak bir sertifikaya (Public Key) ihtiyaç duyulmaktadır.</dd>
+<dd>SSL protokolÃ¼ bÃ¼tÃ¼n yaygÄ±n web sunucularÄ± (server) ve tarayÄ±cÄ±larÄ± (browser) tarafÄ±ndan desteklenen bir protokoldÃ¼r. SSL, standart bir algoritmadÄ±r. Milyonlarca web sitesinde gÃ¼venli veri iletiÅŸimi</dd>
+<dd>iÃ§in kullanÄ±lmaktadÄ±r. SSL fonksiyonun Ã§alÄ±ÅŸabilmesi iÃ§in sunucu tarafÄ±nda bir anahtar (private key) ve istemci tarafÄ±nda Ã§alÄ±ÅŸacak bir sertifikaya (Public Key) ihtiyaÃ§ duyulmaktadÄ±r.</dd>
 <br><img src="https://i.hizliresim.com/uh32op.jpg"></br>
 
-<h1>SSL Nasıl Çalışır</h1>
+<h1>SSL NasÄ±l Ã‡alÄ±ÅŸÄ±r</h1>
 
-<dd>SSL Public Key/Private Key adı verilen anahtarların kullanımına bağlı bir kodlama yöntemine dayalıdır.</dd>
-<dd>SSL kodlama için iki adet anahtar bulunmaktadır. Bu anahtarlar, dijital ortamda kodlanmış yazılımlardır.</dd>
-<dd>Bir anahtarın kilitlemiş olduğu veriyi, sadece diğer anahtar açabilir.</dd>
-<dd>Anahtarlarınızı yarattıktan sonra (SSL default olarak bu işlemi yapmaktadır, sizin herhangi bir işlem yapmanıza gerek yoktur), anahtarlardan </dd>
-<dd>biri (private key) sunucuda kalır. Diğer anahtar (public key) ise, bağlantı kurmak istediğiniz kişilere gönderilir.</dd>
-<dd>Dışarıdan sizinle iletişime geçmek isteyen kişi, public key'i kullanarak mesajı güvenli bir şekilde size gönderir. Veri, size ulaşmadan,</dd>
-<dd>transfer sırasında veriye ulaşılsa bile, şifrenin çözülmesi için sizde bulunan private key gerekecektir.</dd>
+<dd>SSL Public Key/Private Key adÄ± verilen anahtarlarÄ±n kullanÄ±mÄ±na baÄŸlÄ± bir kodlama yÃ¶ntemine dayalÄ±dÄ±r.</dd>
+<dd>SSL kodlama iÃ§in iki adet anahtar bulunmaktadÄ±r. Bu anahtarlar, dijital ortamda kodlanmÄ±ÅŸ yazÄ±lÄ±mlardÄ±r.</dd>
+<dd>Bir anahtarÄ±n kilitlemiÅŸ olduÄŸu veriyi, sadece diÄŸer anahtar aÃ§abilir.</dd>
+<dd>AnahtarlarÄ±nÄ±zÄ± yarattÄ±ktan sonra (SSL default olarak bu iÅŸlemi yapmaktadÄ±r, sizin herhangi bir iÅŸlem yapmanÄ±za gerek yoktur), anahtarlardan </dd>
+<dd>biri (private key) sunucuda kalÄ±r. DiÄŸer anahtar (public key) ise, baÄŸlantÄ± kurmak istediÄŸiniz kiÅŸilere gÃ¶nderilir.</dd>
+<dd>DÄ±ÅŸarÄ±dan sizinle iletiÅŸime geÃ§mek isteyen kiÅŸi, public key'i kullanarak mesajÄ± gÃ¼venli bir ÅŸekilde size gÃ¶nderir. Veri, size ulaÅŸmadan,</dd>
+<dd>transfer sÄ±rasÄ±nda veriye ulaÅŸÄ±lsa bile, ÅŸifrenin Ã§Ã¶zÃ¼lmesi iÃ§in sizde bulunan private key gerekecektir.</dd>
 
-<h1>SSL Sertifikası Nasıl Çalışır?</h1>
+<h1>SSL SertifikasÄ± NasÄ±l Ã‡alÄ±ÅŸÄ±r?</h1>
 
-<dd>SSL sertifikası, bir güvenlik anahtarıyla çalışmaktadır. Sertifika alınırken sunucuya "private key" olarak adlandırılan bir özel anahtar yüklenir. Bu anahtar sayesinde web sitesinin sertifikasyon</dd>
-<dd>haritası çıkarılır. Bu sayede site kullanıcılarının tüm bilgileri özel bir yöntemle şifrelenir. İzi sürülemez bir halde korunur.</dd>
+<dd>SSL sertifikasÄ±, bir gÃ¼venlik anahtarÄ±yla Ã§alÄ±ÅŸmaktadÄ±r. Sertifika alÄ±nÄ±rken sunucuya "private key" olarak adlandÄ±rÄ±lan bir Ã¶zel anahtar yÃ¼klenir. Bu anahtar sayesinde web sitesinin sertifikasyon</dd>
+<dd>haritasÄ± Ã§Ä±karÄ±lÄ±r. Bu sayede site kullanÄ±cÄ±larÄ±nÄ±n tÃ¼m bilgileri Ã¶zel bir yÃ¶ntemle ÅŸifrelenir. Ä°zi sÃ¼rÃ¼lemez bir halde korunur.</dd>
 
-<dd>SSL sertifikası ile uygulanan şifre, yalnızca sunucuya yüklenmiş olan özel anahtar ile kaldırılabilir. Ve bu anahtarın ele geçirilmesi, doğal koşullarda mümkün değildir. Private key, site sahibinde kalan bir şifredir.</dd>
+<dd>SSL sertifikasÄ± ile uygulanan ÅŸifre, yalnÄ±zca sunucuya yÃ¼klenmiÅŸ olan Ã¶zel anahtar ile kaldÄ±rÄ±labilir. Ve bu anahtarÄ±n ele geÃ§irilmesi, doÄŸal koÅŸullarda mÃ¼mkÃ¼n deÄŸildir. Private key, site sahibinde kalan bir ÅŸifredir.</dd>
 
-<dd>SSL kodlama için private key'in yanında bir diğer anahtar daha mevcuttur. Bu anahtarın ismi ise, "Public key" olarak bilinir. Dışarıdan site ile iletişime geçmek isteyenleri public key aracılığı ile size ulaşırlar.</dd>
+<dd>SSL kodlama iÃ§in private key'in yanÄ±nda bir diÄŸer anahtar daha mevcuttur. Bu anahtarÄ±n ismi ise, "Public key" olarak bilinir. DÄ±ÅŸarÄ±dan site ile iletiÅŸime geÃ§mek isteyenleri public key aracÄ±lÄ±ÄŸÄ± ile size ulaÅŸÄ±rlar.</dd>
 
-<dd>Siteden kullanıcıların gönderdiği mesajlar, alışveriş talepleri gibi eylemler public key tarafından size güvenle ulaştırılır. Bu anahtar, aynı zamanda siteyi çeşitli saldırılardan koruma özelliğine de sahiptir. Yani SSL sertifikasının çift yönlü çalıştığından bahsetmek mümkündür.</dd>
-<dd>Bu sertifika hem site kullanıcıları hem de sitenin kendisi için önemli bir güvenlik ağı oluşturmaktadır.</dd>
+<dd>Siteden kullanÄ±cÄ±larÄ±n gÃ¶nderdiÄŸi mesajlar, alÄ±ÅŸveriÅŸ talepleri gibi eylemler public key tarafÄ±ndan size gÃ¼venle ulaÅŸtÄ±rÄ±lÄ±r. Bu anahtar, aynÄ± zamanda siteyi Ã§eÅŸitli saldÄ±rÄ±lardan koruma Ã¶zelliÄŸine de sahiptir. Yani SSL sertifikasÄ±nÄ±n Ã§ift yÃ¶nlÃ¼ Ã§alÄ±ÅŸtÄ±ÄŸÄ±ndan bahsetmek mÃ¼mkÃ¼ndÃ¼r.</dd>
+<dd>Bu sertifika hem site kullanÄ±cÄ±larÄ± hem de sitenin kendisi iÃ§in Ã¶nemli bir gÃ¼venlik aÄŸÄ± oluÅŸturmaktadÄ±r.</dd>
 
-<dd>SSL sertifikalarında iki tür koruma vardır. Bunlar 40 bit veya 128 bit şifreleme türleridir. Bu şifreleme, sertifikanın türüne göre belirlenmektedir.
+<dd>SSL sertifikalarÄ±nda iki tÃ¼r koruma vardÄ±r. Bunlar 40 bit veya 128 bit ÅŸifreleme tÃ¼rleridir. Bu ÅŸifreleme, sertifikanÄ±n tÃ¼rÃ¼ne gÃ¶re belirlenmektedir.
 
 <br><img src="https://i.hizliresim.com/H88n94.jpg"></br>
 
