--- a/yakup3.html
+++ b/yakup3.html
@@ -1,11 +1,11 @@
-<html>
+ï»¿<html>
 <head>
 <title> Yakup </title>
 <meta http-equiv="refresh" content="300">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="Keywords" content="Hosting,'Alan Adı'"/>
+<meta name="Keywords" content="Hosting,'Alan AdÄ±'"/>
 <meta name="Description" content="Yakup Altun."/>
 <meta name="content-language" content="tr" />
 <meta name="author" content="yakup.com">
@@ -15,53 +15,53 @@
 <center>
 <h1>Hosting Nedir?</h1>
 </center>
-Farz edelim bilgisayarınızda yeni bir döküman oluşturdunuz. Bu dökümanı saklamak için o dosyayı bilgisayarınızın diskine kayıt edersiniz ve bilgisayarınızı kapatırsınız. Peki bu dökümanın sizin web sayfanız olduğunu düşünün.
-Web sayfalarınızı internet ortamında kendi bilgisayarınızda barındıramayacağınıza göre size çok güçlü, yedi gün yirmi dört saat hizmet verebilen ve her türlü yoğunlukta problemsiz web sitenizi hızlı bir şekilde yayınlamaya devam edecek bir bilgisayara ihtiyacınız var demektir. Bu bilgisayarlara teknik olarak sunucu denilmekte.
+Farz edelim bilgisayarÄ±nÄ±zda yeni bir dÃ¶kÃ¼man oluÅŸturdunuz. Bu dÃ¶kÃ¼manÄ± saklamak iÃ§in o dosyayÄ± bilgisayarÄ±nÄ±zÄ±n diskine kayÄ±t edersiniz ve bilgisayarÄ±nÄ±zÄ± kapatÄ±rsÄ±nÄ±z. Peki bu dÃ¶kÃ¼manÄ±n sizin web sayfanÄ±z olduÄŸunu dÃ¼ÅŸÃ¼nÃ¼n.
+Web sayfalarÄ±nÄ±zÄ± internet ortamÄ±nda kendi bilgisayarÄ±nÄ±zda barÄ±ndÄ±ramayacaÄŸÄ±nÄ±za gÃ¶re size Ã§ok gÃ¼Ã§lÃ¼, yedi gÃ¼n yirmi dÃ¶rt saat hizmet verebilen ve her tÃ¼rlÃ¼ yoÄŸunlukta problemsiz web sitenizi hÄ±zlÄ± bir ÅŸekilde yayÄ±nlamaya devam edecek bir bilgisayara ihtiyacÄ±nÄ±z var demektir. Bu bilgisayarlara teknik olarak sunucu denilmekte.
 
-Hosting; kişi ve organizasyonlara ait web sitelerinin ve sayfalarının kesintisiz bir şekilde internet üzerinde yayınlanmasına olanak tanıyan, güçlü donanım ve yazılımsal web sunucularının birleşimi ile oluşturulmuş bir web sitesi yayınlama hizmetidir. Hazırlanan web sayfaları, kontrol panel üzerinden çeşitli dosya transfer yazılımları ile bu gelişmiş web sunuculara yüklenir, domain tanımlamaları yapılır ve yayına hazır hale getirilir. Bu hizmetin bir diğer adı da barındırma hizmetidir. Özellikle web sitesi tasarımcıları ve webmaster lar arasında web hosting olarak da adlandırılır. Hosting hizmeti sayesinde web siteleriniz dünyanın her yerinden 7 gün 24 saat erişilebilir hale gelir.
+Hosting; kiÅŸi ve organizasyonlara ait web sitelerinin ve sayfalarÄ±nÄ±n kesintisiz bir ÅŸekilde internet Ã¼zerinde yayÄ±nlanmasÄ±na olanak tanÄ±yan, gÃ¼Ã§lÃ¼ donanÄ±m ve yazÄ±lÄ±msal web sunucularÄ±nÄ±n birleÅŸimi ile oluÅŸturulmuÅŸ bir web sitesi yayÄ±nlama hizmetidir. HazÄ±rlanan web sayfalarÄ±, kontrol panel Ã¼zerinden Ã§eÅŸitli dosya transfer yazÄ±lÄ±mlarÄ± ile bu geliÅŸmiÅŸ web sunuculara yÃ¼klenir, domain tanÄ±mlamalarÄ± yapÄ±lÄ±r ve yayÄ±na hazÄ±r hale getirilir. Bu hizmetin bir diÄŸer adÄ± da barÄ±ndÄ±rma hizmetidir. Ã–zellikle web sitesi tasarÄ±mcÄ±larÄ± ve webmaster lar arasÄ±nda web hosting olarak da adlandÄ±rÄ±lÄ±r. Hosting hizmeti sayesinde web siteleriniz dÃ¼nyanÄ±n her yerinden 7 gÃ¼n 24 saat eriÅŸilebilir hale gelir.
 
-" Hosting; kişi ve organizasyonlara ait web sitelerinin ve sayfalarının kesintisiz şekilde internet üzerinde yayınlanmasını sağlayan bir web sitesi yayınlama hizmetidir. "
+" Hosting; kiÅŸi ve organizasyonlara ait web sitelerinin ve sayfalarÄ±nÄ±n kesintisiz ÅŸekilde internet Ã¼zerinde yayÄ±nlanmasÄ±nÄ± saÄŸlayan bir web sitesi yayÄ±nlama hizmetidir. "
 <center>
-<h3>Hosting ne amaçla kullanılır?</h3>
+<h3>Hosting ne amaÃ§la kullanÄ±lÄ±r?</h3>
 </center>
-En basit tabiriyle internette web sitenizi yayınlamak ve erişilebilebilir olmasını istiyor iseniz hosting hizmeti edinmeniz birinci gerekliliktir.
+En basit tabiriyle internette web sitenizi yayÄ±nlamak ve eriÅŸilebilebilir olmasÄ±nÄ± istiyor iseniz hosting hizmeti edinmeniz birinci gerekliliktir.
 
-Farz edelim kendinize özel bir blog sayfası ile deneyimlerinizi insanlar ile paylaşmak istiyorsunuz. Ya da üretmekte olduğunuz bir ürünün internet üzerinden satışını gerçekleştirmek istiyorsunuz. Ya da kişilerin buluşup deneyimlerini paylaştığı, sosyalleştiği forum oluşturma niyetiniz var. Tüm bu hayaller için hosting hizmetine ihtiyaç duyarsınız.
+Farz edelim kendinize Ã¶zel bir blog sayfasÄ± ile deneyimlerinizi insanlar ile paylaÅŸmak istiyorsunuz. Ya da Ã¼retmekte olduÄŸunuz bir Ã¼rÃ¼nÃ¼n internet Ã¼zerinden satÄ±ÅŸÄ±nÄ± gerÃ§ekleÅŸtirmek istiyorsunuz. Ya da kiÅŸilerin buluÅŸup deneyimlerini paylaÅŸtÄ±ÄŸÄ±, sosyalleÅŸtiÄŸi forum oluÅŸturma niyetiniz var. TÃ¼m bu hayaller iÃ§in hosting hizmetine ihtiyaÃ§ duyarsÄ±nÄ±z.
 
-Edinmiş olduğunuz bu hizmetin birçok özellikleri bulunmakta. Sayfalarınızın hızlı olması, sayfalarınıza yapılan olası saldırıların ve içerik kayıplarının önüne geçecek güvenlik yazılımlarına sahip olması, dünyanın her yerinden erişilebilir olabilmek için web sunucularının en kaliteli veri merkezleri üzerinden hizmet veriyor olması, web sayfalarınızda olabilecek veri kayıplarına karşı periyodik olarak verilerinizin yedeklenmesi hosting hizmetinin kalitesini de belirleyen temel özelliklerdir.
+EdinmiÅŸ olduÄŸunuz bu hizmetin birÃ§ok Ã¶zellikleri bulunmakta. SayfalarÄ±nÄ±zÄ±n hÄ±zlÄ± olmasÄ±, sayfalarÄ±nÄ±za yapÄ±lan olasÄ± saldÄ±rÄ±larÄ±n ve iÃ§erik kayÄ±plarÄ±nÄ±n Ã¶nÃ¼ne geÃ§ecek gÃ¼venlik yazÄ±lÄ±mlarÄ±na sahip olmasÄ±, dÃ¼nyanÄ±n her yerinden eriÅŸilebilir olabilmek iÃ§in web sunucularÄ±nÄ±n en kaliteli veri merkezleri Ã¼zerinden hizmet veriyor olmasÄ±, web sayfalarÄ±nÄ±zda olabilecek veri kayÄ±plarÄ±na karÅŸÄ± periyodik olarak verilerinizin yedeklenmesi hosting hizmetinin kalitesini de belirleyen temel Ã¶zelliklerdir.
 <center>
-<h3>Hosting seçenekleri nelerdir?</h3>
+<h3>Hosting seÃ§enekleri nelerdir?</h3>
 </center>
-Web sitenizde kullanmış olduğunuz web teknolojileri ve web sitenizin amacına göre size uygun hosting hizmetini seçmelisiniz. Her proje için değişik ihtiyaçlar bulunmakta ve bu ihtiyaca uygun bir hizmet seçmeniz çok önemli bir konu.
-Örnek verecek olur isek kişisel bir blog için paylaşımlı hosting hizmeti size yeterli olabiliyor iken kapsamlı bir e-ticaret dükkanı kurma niyetiniz var ise bulut sunucu tarzında daha büyük barındırma hizmetlerine göz atmalısınız. Bir örnek daha verecek olur ise eğer dünyanın en gelişmiş içerik yönetim sistemi olan Wordpress ile sayfalarınızı oluştur iseniz sizin için Wordpress hosting hizmeti daha doğru bir seçim olabilir. Hosting seçeneklerimize gelin bir göz gezdirelim;
+Web sitenizde kullanmÄ±ÅŸ olduÄŸunuz web teknolojileri ve web sitenizin amacÄ±na gÃ¶re size uygun hosting hizmetini seÃ§melisiniz. Her proje iÃ§in deÄŸiÅŸik ihtiyaÃ§lar bulunmakta ve bu ihtiyaca uygun bir hizmet seÃ§meniz Ã§ok Ã¶nemli bir konu.
+Ã–rnek verecek olur isek kiÅŸisel bir blog iÃ§in paylaÅŸÄ±mlÄ± hosting hizmeti size yeterli olabiliyor iken kapsamlÄ± bir e-ticaret dÃ¼kkanÄ± kurma niyetiniz var ise bulut sunucu tarzÄ±nda daha bÃ¼yÃ¼k barÄ±ndÄ±rma hizmetlerine gÃ¶z atmalÄ±sÄ±nÄ±z. Bir Ã¶rnek daha verecek olur ise eÄŸer dÃ¼nyanÄ±n en geliÅŸmiÅŸ iÃ§erik yÃ¶netim sistemi olan Wordpress ile sayfalarÄ±nÄ±zÄ± oluÅŸtur iseniz sizin iÃ§in Wordpress hosting hizmeti daha doÄŸru bir seÃ§im olabilir. Hosting seÃ§eneklerimize gelin bir gÃ¶z gezdirelim;
 
 
 <h4>1.Wordpress Hosting</h4>
 
-<dd>Dünya üzerinde en fazla kullanılan içerik yönetim sistemi ve blog</dd><br>
-<dd>oluşturma aracı olan wordpress I kullanıyor iseniz wordpress hosting</dd><br>
-<dd>hizmetini kullanmanız zorunludur. Wordpress hosting hizmeti, wp e özel</dd><br>
-<dd>olarak optimize edilmiş ve %100 uygulama uyumluluğu sağlayan bir hizmet.</dd><br>
-<dd>Bu nedenle neredeyse bir kaç dakikada, en hızlı şekilde wordpress sitenizi</dd><br>
-<dd>sorunsuz bir şekilde yayına alabilirsiniz. Kurulumları gerçekleştirdiğiniz</dd><br>
-<dd>an hiç bir sorunla karşılaşmazsınız.
+<dd>DÃ¼nya Ã¼zerinde en fazla kullanÄ±lan iÃ§erik yÃ¶netim sistemi ve blog</dd><br>
+<dd>oluÅŸturma aracÄ± olan wordpress I kullanÄ±yor iseniz wordpress hosting</dd><br>
+<dd>hizmetini kullanmanÄ±z zorunludur. Wordpress hosting hizmeti, wp e Ã¶zel</dd><br>
+<dd>olarak optimize edilmiÅŸ ve %100 uygulama uyumluluÄŸu saÄŸlayan bir hizmet.</dd><br>
+<dd>Bu nedenle neredeyse bir kaÃ§ dakikada, en hÄ±zlÄ± ÅŸekilde wordpress sitenizi</dd><br>
+<dd>sorunsuz bir ÅŸekilde yayÄ±na alabilirsiniz. KurulumlarÄ± gerÃ§ekleÅŸtirdiÄŸiniz</dd><br>
+<dd>an hiÃ§ bir sorunla karÅŸÄ±laÅŸmazsÄ±nÄ±z.
 <center>
 <br><img src="https://i.hizliresim.com/U0QdKg.jpg"></br>
 </center>
 <h4>2.Linux Hosting</h4>
 
-<dd>Özellikle PHP, MySQL, Python vb açık kaynak felsefesine uygun araçlarla tasarlanmış olan web siteleri</dd><br>
-<dd>için en doğru çözümdür. Sayfalarınızı çok hızlı bir şekilde yüklersiniz, veritabanınızı kontrol panel üzerinden</dd><br>
-<dd>oluşturursunuz ve yine %100 uygulama uyumluluğu ile sitenizi en hızlı şekilde yayına alırsınız.</dd><br>
+<dd>Ã–zellikle PHP, MySQL, Python vb aÃ§Ä±k kaynak felsefesine uygun araÃ§larla tasarlanmÄ±ÅŸ olan web siteleri</dd><br>
+<dd>iÃ§in en doÄŸru Ã§Ã¶zÃ¼mdÃ¼r. SayfalarÄ±nÄ±zÄ± Ã§ok hÄ±zlÄ± bir ÅŸekilde yÃ¼klersiniz, veritabanÄ±nÄ±zÄ± kontrol panel Ã¼zerinden</dd><br>
+<dd>oluÅŸturursunuz ve yine %100 uygulama uyumluluÄŸu ile sitenizi en hÄ±zlÄ± ÅŸekilde yayÄ±na alÄ±rsÄ±nÄ±z.</dd><br>
 
-<dd>Dünya üzerinde belirtmiş olduğumuz açık kaynak tabanlı binlerce web (cms, blog, forum, bilgi bankası,</dd><br>
-<dd>e-ticaret) uygulaması bulunmakta. Bu uygulamalardan da faydalanmak ve barındırmak istiyor iseniz yine bu hizmeti tercih etmelisiniz.</dd><br>
+<dd>DÃ¼nya Ã¼zerinde belirtmiÅŸ olduÄŸumuz aÃ§Ä±k kaynak tabanlÄ± binlerce web (cms, blog, forum, bilgi bankasÄ±,</dd><br>
+<dd>e-ticaret) uygulamasÄ± bulunmakta. Bu uygulamalardan da faydalanmak ve barÄ±ndÄ±rmak istiyor iseniz yine bu hizmeti tercih etmelisiniz.</dd><br>
 
 <h4>3.Windows Hosting</h4>
 
 
 
-Microsoft yazılım teknolojileri, kolay ve esnek web yazılımları tasarlayabilmek için biçilmiş bir kaftan. Bu teknolojiler ( asp.net, .net core, mssql ) ile geliştirilmiş bir web sitesi, yine bu teknolojiler ile oluşturulmuş bir barındırma altyapısı üzerinden hizmet vermek zoruna. İşte bu tarz barındırma altyapıları windows hosting olarak adlandırılmakta. Windows Server işletim sistemi üzerinde geliştirilen bu barındırma altyapıları üzerinden kesintisiz ve hızlı hizmet alabilirsiniz.
+Microsoft yazÄ±lÄ±m teknolojileri, kolay ve esnek web yazÄ±lÄ±mlarÄ± tasarlayabilmek iÃ§in biÃ§ilmiÅŸ bir kaftan. Bu teknolojiler ( asp.net, .net core, mssql ) ile geliÅŸtirilmiÅŸ bir web sitesi, yine bu teknolojiler ile oluÅŸturulmuÅŸ bir barÄ±ndÄ±rma altyapÄ±sÄ± Ã¼zerinden hizmet vermek zoruna. Ä°ÅŸte bu tarz barÄ±ndÄ±rma altyapÄ±larÄ± windows hosting olarak adlandÄ±rÄ±lmakta. Windows Server iÅŸletim sistemi Ã¼zerinde geliÅŸtirilen bu barÄ±ndÄ±rma altyapÄ±larÄ± Ã¼zerinden kesintisiz ve hÄ±zlÄ± hizmet alabilirsiniz.
 
 
 
