--- a/yakup4.html
+++ b/yakup4.html
@@ -1,11 +1,11 @@
-<html>
+ï»¿<html>
 <head>
 <title> Yakup </title>
 <meta http-equiv="refresh" content="300">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="Keywords" content="Hosting,'Alan Adı'"/>
+<meta name="Keywords" content="Hosting,'Alan AdÄ±'"/>
 <meta name="Description" content="Yakup Altun."/>
 <meta name="content-language" content="tr" />
 <meta name="author" content="yakup.com">
@@ -14,43 +14,43 @@
 </style>
 		<body bgcolor="white" background="https://i.hizliresim.com/e5kUmC.jpg">
 <center>
-<h1>Barındırma Nedir?</h1>
+<h1>BarÄ±ndÄ±rma Nedir?</h1>
 </center>
 
-<dd>Hosting veya Barındırma, bir web sitesinde yayınlanmak istenen sayfaların, resimlerin veya dokümanların internet kullanıcıları tarafından erişebileceği bir bilgisayarda tutulmasıdır. Barındırma hizmeti web sitesinde bulundurulmak istenen içeriğin yüklendiği ve web sayfasının arka yüzüdür.</dd>
+<dd>Hosting veya BarÄ±ndÄ±rma, bir web sitesinde yayÄ±nlanmak istenen sayfalarÄ±n, resimlerin veya dokÃ¼manlarÄ±n internet kullanÄ±cÄ±larÄ± tarafÄ±ndan eriÅŸebileceÄŸi bir bilgisayarda tutulmasÄ±dÄ±r. BarÄ±ndÄ±rma hizmeti web sitesinde bulundurulmak istenen iÃ§eriÄŸin yÃ¼klendiÄŸi ve web sayfasÄ±nÄ±n arka yÃ¼zÃ¼dÃ¼r.</dd>
 
-<dd>İnternette site yayınlamak için özel olarak üretilmiş, internet omurgasına çok hızlı bağlantısı olan, yüzlerce kullanıcıya aynı anda hizmet verebilecek bir bilgisayarda (sunucuda) yayınlamak istediği dosyaların saklanması gerekir. Web siteye ait dosyaları saklayan ve internet kullanıcılarının erişimine sunan bu bilgisayarlara web sunucusu (web server), bu veri saklama ve yayınlama işlemine de barındırma hizmeti denir.</dd>
+<dd>Ä°nternette site yayÄ±nlamak iÃ§in Ã¶zel olarak Ã¼retilmiÅŸ, internet omurgasÄ±na Ã§ok hÄ±zlÄ± baÄŸlantÄ±sÄ± olan, yÃ¼zlerce kullanÄ±cÄ±ya aynÄ± anda hizmet verebilecek bir bilgisayarda (sunucuda) yayÄ±nlamak istediÄŸi dosyalarÄ±n saklanmasÄ± gerekir. Web siteye ait dosyalarÄ± saklayan ve internet kullanÄ±cÄ±larÄ±nÄ±n eriÅŸimine sunan bu bilgisayarlara web sunucusu (web server), bu veri saklama ve yayÄ±nlama iÅŸlemine de barÄ±ndÄ±rma hizmeti denir.</dd>
 
-<dd>Web hosting işini yapan yüzlerce firma ve her firmanın uygun olabilecek farklı boyutlardaki hosting paketleri vardır.</dd>
+<dd>Web hosting iÅŸini yapan yÃ¼zlerce firma ve her firmanÄ±n uygun olabilecek farklÄ± boyutlardaki hosting paketleri vardÄ±r.</dd>
 
-<dd>Fiyatı ve performansı etkileyen temel hosting özellikleri:</dd>
+<dd>FiyatÄ± ve performansÄ± etkileyen temel hosting Ã¶zellikleri:</dd>
 <ul>
-<li>Hosting Depolama Alanı</li>
-<li>Bant Genişliği Giriş ve Çıkış Trafiği</li>
-<li>Sunucu İşletim Sistemi Tipi (Windows, Linux, Unix, Centos, Redhat, FreeBSD)</li>
-<li>Veri Tabanı Desteği (MySQL, MSSQL, Access, ...)</li>
+<li>Hosting Depolama AlanÄ±</li>
+<li>Bant GeniÅŸliÄŸi GiriÅŸ ve Ã‡Ä±kÄ±ÅŸ TrafiÄŸi</li>
+<li>Sunucu Ä°ÅŸletim Sistemi Tipi (Windows, Linux, Unix, Centos, Redhat, FreeBSD)</li>
+<li>Veri TabanÄ± DesteÄŸi (MySQL, MSSQL, Access, ...)</li>
 <li>Admin Paneli (Plesk, cPanel, Direct Admin, Entrenix, ...)</li>
-<li>SSL Desteği Güvenlik Sertifikası (VeriSign, Thawte, Comodo,...)</li>
+<li>SSL DesteÄŸi GÃ¼venlik SertifikasÄ± (VeriSign, Thawte, Comodo,...)</li>
 <li>Server Side Scripts (ASP.NET, ASP, PHP, ...)</li>
-<li>Sunucu özelliklerine tam erişim</li>
+<li>Sunucu Ã¶zelliklerine tam eriÅŸim</li>
 </ul>
 
 
 
-<h4>Shared Hosting / Paylaşımlı</h4>
-<dd>Paylaşımlı hosting adı da kullanılmaktadır, bu tür sistemlerde tek bir sunucu üzerinde, sunucunun bant genişliği ve fiziksel gücüne göre fazla sayıda hosting barındırılabilir, sözgelimi ortalama bir ev bilgisayarından oluşturulacak bir sunucu 100 adet linux hosting barındırılabilirken markalı ve sunucu olarak üretilmiş özel makinalarda sitelerin standart ve yüksek yoğunluklu olmadığını düşünürsek 1000'den fazla hosting hesabı açılabilir.</dd>
+<h4>Shared Hosting / PaylaÅŸÄ±mlÄ±</h4>
+<dd>PaylaÅŸÄ±mlÄ± hosting adÄ± da kullanÄ±lmaktadÄ±r, bu tÃ¼r sistemlerde tek bir sunucu Ã¼zerinde, sunucunun bant geniÅŸliÄŸi ve fiziksel gÃ¼cÃ¼ne gÃ¶re fazla sayÄ±da hosting barÄ±ndÄ±rÄ±labilir, sÃ¶zgelimi ortalama bir ev bilgisayarÄ±ndan oluÅŸturulacak bir sunucu 100 adet linux hosting barÄ±ndÄ±rÄ±labilirken markalÄ± ve sunucu olarak Ã¼retilmiÅŸ Ã¶zel makinalarda sitelerin standart ve yÃ¼ksek yoÄŸunluklu olmadÄ±ÄŸÄ±nÄ± dÃ¼ÅŸÃ¼nÃ¼rsek 1000'den fazla hosting hesabÄ± aÃ§Ä±labilir.</dd>
 
 <h4>Co-Location / Sunucu Bulundurma</h4>
-<dd>Bu hizmette hizmeti sunucu bant genişliği ya da trafik, eğer varsa elektrik ücreti eğer talep ediliyorsa kurulum ücreti olarak temin edersiniz, kurulacak yazılım ve lisansların da ücretleri anlaşmaya bağlı olarak sizin karşılamanız gereken ücretlerdir, bunun dışında fiziksel olarak sunucuyu çalışır durumda data centera teslim etmek durumundasınız.</dd>
+<dd>Bu hizmette hizmeti sunucu bant geniÅŸliÄŸi ya da trafik, eÄŸer varsa elektrik Ã¼creti eÄŸer talep ediliyorsa kurulum Ã¼creti olarak temin edersiniz, kurulacak yazÄ±lÄ±m ve lisanslarÄ±n da Ã¼cretleri anlaÅŸmaya baÄŸlÄ± olarak sizin karÅŸÄ±lamanÄ±z gereken Ã¼cretlerdir, bunun dÄ±ÅŸÄ±nda fiziksel olarak sunucuyu Ã§alÄ±ÅŸÄ±r durumda data centera teslim etmek durumundasÄ±nÄ±z.</dd>
 
 <h4>Reseller / Bayi</h4>
-Shared hosting / Ortaklaşa sunucularda da bu hizmet sunulabilir, esasen aldığınız hosting paketi bayi paketi ya da reseller adı altında bulunmakta ve yukarıda yazdığımız paylaşımlı hosting sunucularında kullanılmaktadır, burada tek fark size ait bir limit dahilinde bir den fazla hosting hesabını kendi panelinizden kendi kendinize açabilmenizdir.</dd>
+Shared hosting / OrtaklaÅŸa sunucularda da bu hizmet sunulabilir, esasen aldÄ±ÄŸÄ±nÄ±z hosting paketi bayi paketi ya da reseller adÄ± altÄ±nda bulunmakta ve yukarÄ±da yazdÄ±ÄŸÄ±mÄ±z paylaÅŸÄ±mlÄ± hosting sunucularÄ±nda kullanÄ±lmaktadÄ±r, burada tek fark size ait bir limit dahilinde bir den fazla hosting hesabÄ±nÄ± kendi panelinizden kendi kendinize aÃ§abilmenizdir.</dd>
 
-<h4>Dedicated Hosting / Kiralık Sunucu</h4>
-<dd>Bu hizmette talep ettiğiniz sunucu anlaşmanıza bağlı olarak sizin adınıza temin edilir, bazı firmalar bu hizmetin anlaşmasını sözleşme bitiminde sunucunun size ait olacağı tahüdünü verebilirler, normal şartlarda fiziksel makinanın ortalama maliyetini ve buna bağlı olarak bant genişliği ve elektrik ücretini ayrıca ödersiniz.</dd>
+<h4>Dedicated Hosting / KiralÄ±k Sunucu</h4>
+<dd>Bu hizmette talep ettiÄŸiniz sunucu anlaÅŸmanÄ±za baÄŸlÄ± olarak sizin adÄ±nÄ±za temin edilir, bazÄ± firmalar bu hizmetin anlaÅŸmasÄ±nÄ± sÃ¶zleÅŸme bitiminde sunucunun size ait olacaÄŸÄ± tahÃ¼dÃ¼nÃ¼ verebilirler, normal ÅŸartlarda fiziksel makinanÄ±n ortalama maliyetini ve buna baÄŸlÄ± olarak bant geniÅŸliÄŸi ve elektrik Ã¼cretini ayrÄ±ca Ã¶dersiniz.</dd>
 
-<h4>Virtual Dedicated Hosting / Sanal Kiralık Sunucu</h4>
-<dd>Bu hizmette talep ettiğiniz sunucu anlaşmanıza bağlı olarak sizin adınıza fiziksel bir sunucu üzerinden kaynak paylaşımı yöntemi ile sağlanmaktadır. Burada kullanacağınız kaynak CPU, RAM ve HDD olarak size berlitilmekte ve fiziksel sunucu üzerinden size ayrılmaktadır. Türkiye'de bu ismi (VDS) ilk ortaya atan firma Narweb.net olup 2004 yılında bunu ortaya atmıştır.</dd>
+<h4>Virtual Dedicated Hosting / Sanal KiralÄ±k Sunucu</h4>
+<dd>Bu hizmette talep ettiÄŸiniz sunucu anlaÅŸmanÄ±za baÄŸlÄ± olarak sizin adÄ±nÄ±za fiziksel bir sunucu Ã¼zerinden kaynak paylaÅŸÄ±mÄ± yÃ¶ntemi ile saÄŸlanmaktadÄ±r. Burada kullanacaÄŸÄ±nÄ±z kaynak CPU, RAM ve HDD olarak size berlitilmekte ve fiziksel sunucu Ã¼zerinden size ayrÄ±lmaktadÄ±r. TÃ¼rkiye'de bu ismi (VDS) ilk ortaya atan firma Narweb.net olup 2004 yÄ±lÄ±nda bunu ortaya atmÄ±ÅŸtÄ±r.</dd>
 </body>
 <center>
 <br><img src="https://i.hizliresim.com/P9PK9b.jpg"></br>
