--- a/yakup5.html
+++ b/yakup5.html
@@ -1,11 +1,11 @@
-<html>
+ï»¿<html>
 <head>
 <title> Yakup </title>
 <meta http-equiv="refresh" content="300">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="Keywords" content="Hosting,'Alan Adı'"/>
+<meta name="Keywords" content="Hosting,'Alan AdÄ±'"/>
 <meta name="Description" content="Yakup Altun."/>
 <meta name="content-language" content="tr" />
 <meta name="author" content="yakup.com">
@@ -14,35 +14,35 @@
 <body bgcolor="white" background="https://i.hizliresim.com/e5kUmC.jpg">
 <center>
 <h1>Putty</h1>
-<dd>Putty ağ üzerindeki Linux işletim sistemli sunucunuza/makinanıza terminal üzerinden bağlantı sağlayan boyut olarak oldukça küçük ama güçlü ücretsiz ve açık
-<dd>kaynak kodlu bir yazılımdır. Putty ile bağlantı yaptığınız sunucunuzu terminal üzerinden çeşitli komutlar ile yönetebilirsiniz. Daha çok gelişmiş linux kullanıcılarına hitap eder zira kullanıcı</dd>
-<dd>arayüzü yoktur tüm işlemleri komutlar ile yapmanız gerekir.</dd>
+<dd>Putty aÄŸ Ã¼zerindeki Linux iÅŸletim sistemli sunucunuza/makinanÄ±za terminal Ã¼zerinden baÄŸlantÄ± saÄŸlayan boyut olarak oldukÃ§a kÃ¼Ã§Ã¼k ama gÃ¼Ã§lÃ¼ Ã¼cretsiz ve aÃ§Ä±k
+<dd>kaynak kodlu bir yazÄ±lÄ±mdÄ±r. Putty ile baÄŸlantÄ± yaptÄ±ÄŸÄ±nÄ±z sunucunuzu terminal Ã¼zerinden Ã§eÅŸitli komutlar ile yÃ¶netebilirsiniz. Daha Ã§ok geliÅŸmiÅŸ linux kullanÄ±cÄ±larÄ±na hitap eder zira kullanÄ±cÄ±</dd>
+<dd>arayÃ¼zÃ¼ yoktur tÃ¼m iÅŸlemleri komutlar ile yapmanÄ±z gerekir.</dd>
 </center>
 <center>
 <img src="https://i.hizliresim.com/PGvDDw.jpg">
 </center>
 <h1>Winscp</h1>
-<dd>Mart 2000 yılında piyasaya çıktı. Başlangıçta,  Prag'daki Ekonomi Üniversitesi'nde geliştirilmeye başlanılmış olan" FTP " Uygulamasıdır.</dd>
-<dd>Açık kaynaklı ve ücretsizdir. WinSCP , FTP dosyalarına erişim sağlamak üzerine inşa edilmiş bir programdır. Asıl amacı güvenli bir şekilde dosyalarımızı sunucuya</dd>
-<dd>aktarmaktır. Windows için tasarlanılmış ayrıca atlama listesi konumları, bağlam menüsü girişleri , dosyaları sürükle bırak mantığıyla Windows özelliklerini kapsayan</dd>
-<dd>programdır </dd>
-<h3>WinSCP özellikleri nelerdir?</h3>
+<dd>Mart 2000 yÄ±lÄ±nda piyasaya Ã§Ä±ktÄ±. BaÅŸlangÄ±Ã§ta,  Prag'daki Ekonomi Ãœniversitesi'nde geliÅŸtirilmeye baÅŸlanÄ±lmÄ±ÅŸ olan" FTP " UygulamasÄ±dÄ±r.</dd>
+<dd>AÃ§Ä±k kaynaklÄ± ve Ã¼cretsizdir. WinSCP , FTP dosyalarÄ±na eriÅŸim saÄŸlamak Ã¼zerine inÅŸa edilmiÅŸ bir programdÄ±r. AsÄ±l amacÄ± gÃ¼venli bir ÅŸekilde dosyalarÄ±mÄ±zÄ± sunucuya</dd>
+<dd>aktarmaktÄ±r. Windows iÃ§in tasarlanÄ±lmÄ±ÅŸ ayrÄ±ca atlama listesi konumlarÄ±, baÄŸlam menÃ¼sÃ¼ giriÅŸleri , dosyalarÄ± sÃ¼rÃ¼kle bÄ±rak mantÄ±ÄŸÄ±yla Windows Ã¶zelliklerini kapsayan</dd>
+<dd>programdÄ±r </dd>
+<h3>WinSCP Ã¶zellikleri nelerdir?</h3>
 
 
-Özellikle güvenlik bakımından en gelişmiş uygulamalardan olan WinSCP içerisinde, SCP Protokollerini SSH  desteklenmesini sağlar, FTP ile WebDav Protokollerini de içerisinde barındırır. Görsel kullanıcı ara yüzü gelişmiş olup, Windows, entegre bir şekilde çalışmaktadır. Dosya erişimi kolay ve rahattır. Ayrıca toplu dosya komutları, komut dosya satır ara yüzleri, .NET Desteklidir. Dizin ve PUTTY ile senkronizasyonları mevcut olup Dahili text editörünü de içerisinde barındırmaktadır. Güvenlik bakımından Kayıtlı şifreleri genel bir şifreyle güvenliğini üst seviyeye çıkartmakla beraberinde Public key, Kerberos gibi şifreleme yöntemlerini de bu uygulamada bulabilirsiniz.
+Ã–zellikle gÃ¼venlik bakÄ±mÄ±ndan en geliÅŸmiÅŸ uygulamalardan olan WinSCP iÃ§erisinde, SCP Protokollerini SSH  desteklenmesini saÄŸlar, FTP ile WebDav Protokollerini de iÃ§erisinde barÄ±ndÄ±rÄ±r. GÃ¶rsel kullanÄ±cÄ± ara yÃ¼zÃ¼ geliÅŸmiÅŸ olup, Windows, entegre bir ÅŸekilde Ã§alÄ±ÅŸmaktadÄ±r. Dosya eriÅŸimi kolay ve rahattÄ±r. AyrÄ±ca toplu dosya komutlarÄ±, komut dosya satÄ±r ara yÃ¼zleri, .NET Desteklidir. Dizin ve PUTTY ile senkronizasyonlarÄ± mevcut olup Dahili text editÃ¶rÃ¼nÃ¼ de iÃ§erisinde barÄ±ndÄ±rmaktadÄ±r. GÃ¼venlik bakÄ±mÄ±ndan KayÄ±tlÄ± ÅŸifreleri genel bir ÅŸifreyle gÃ¼venliÄŸini Ã¼st seviyeye Ã§Ä±kartmakla beraberinde Public key, Kerberos gibi ÅŸifreleme yÃ¶ntemlerini de bu uygulamada bulabilirsiniz.
 
 <img src="https://i.hizliresim.com/t2y5hX.png">
 
 <h1>GitHup</h1>
-GitHub, git yazılımı ile entegre olmuş bir depolama alanıdır. Git ile GitHub birbirine karıştırmayın lütfen. Git versiyon kontrol sistemidir.</dd>
-<dd>GitHub sayesinde dünyanın çeşitli ülkelerinden, bu ülkelerin bazı yerlerinden, projenize farklı bir kaç kişi ekleyerek takım çalışması yapabilirsiniz.</dd>
-<dd>Ayrıca, GitHub ile dünya üzerinde projenizin herkes tarafından görülmesini, değerlendirilmesi sağlayabilirsiniz.</dd>
-<dd>GitHub üzerinde paylaşılan kodlar ile kendinizi geliştirebilirsiniz. Öncelikli olarak GitHub kullanabilmek için bir hesap oluşturmanız gerekmektedir.</dd>
-<dd>Buradan GitHub'a kayıt olabilirsiniz.</dd>
-<dd>GitHub'a kayıt işlemini tamamladıysanız gerçek konuya başlamadan küçük bir kaç şeyden bahsetmek istiyorum.</dd>
-<dd>GitHub, depolama alanının windows ve mac için geliştirmiş olduğu uygulamasına buradan ulaşabilirsiniz.</dd>
-<dd>Bu uygulama ile masaüstünüzden sürükle bırak şeklinde depolama işlemi yapabilirsiniz. Ben bu yazımda komut sistemi üzerinden gideceğim.</dd>
-<dd>Hazırsak başlayalım.</dd>
+GitHub, git yazÄ±lÄ±mÄ± ile entegre olmuÅŸ bir depolama alanÄ±dÄ±r. Git ile GitHub birbirine karÄ±ÅŸtÄ±rmayÄ±n lÃ¼tfen. Git versiyon kontrol sistemidir.</dd>
+<dd>GitHub sayesinde dÃ¼nyanÄ±n Ã§eÅŸitli Ã¼lkelerinden, bu Ã¼lkelerin bazÄ± yerlerinden, projenize farklÄ± bir kaÃ§ kiÅŸi ekleyerek takÄ±m Ã§alÄ±ÅŸmasÄ± yapabilirsiniz.</dd>
+<dd>AyrÄ±ca, GitHub ile dÃ¼nya Ã¼zerinde projenizin herkes tarafÄ±ndan gÃ¶rÃ¼lmesini, deÄŸerlendirilmesi saÄŸlayabilirsiniz.</dd>
+<dd>GitHub Ã¼zerinde paylaÅŸÄ±lan kodlar ile kendinizi geliÅŸtirebilirsiniz. Ã–ncelikli olarak GitHub kullanabilmek iÃ§in bir hesap oluÅŸturmanÄ±z gerekmektedir.</dd>
+<dd>Buradan GitHub'a kayÄ±t olabilirsiniz.</dd>
+<dd>GitHub'a kayÄ±t iÅŸlemini tamamladÄ±ysanÄ±z gerÃ§ek konuya baÅŸlamadan kÃ¼Ã§Ã¼k bir kaÃ§ ÅŸeyden bahsetmek istiyorum.</dd>
+<dd>GitHub, depolama alanÄ±nÄ±n windows ve mac iÃ§in geliÅŸtirmiÅŸ olduÄŸu uygulamasÄ±na buradan ulaÅŸabilirsiniz.</dd>
+<dd>Bu uygulama ile masaÃ¼stÃ¼nÃ¼zden sÃ¼rÃ¼kle bÄ±rak ÅŸeklinde depolama iÅŸlemi yapabilirsiniz. Ben bu yazÄ±mda komut sistemi Ã¼zerinden gideceÄŸim.</dd>
+<dd>HazÄ±rsak baÅŸlayalÄ±m.</dd>
 
 <img src="https://i.hizliresim.com/2yy7ow.jpg">
 
