--- a/yakup6.html
+++ b/yakup6.html
@@ -1,11 +1,11 @@
-<html>
+ï»¿<html>
 <head>
 <title> Yakup </title>
 <meta http-equiv="refresh" content="300">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="Keywords" content="Hosting,'Alan Adı'"/>
+<meta name="Keywords" content="Hosting,'Alan AdÄ±'"/>
 <meta name="Description" content="Yakup Altun."/>
 <meta name="content-language" content="tr" />
 <meta name="author" content="yakup.com">
@@ -16,13 +16,13 @@
 <center>
 <table>
 <tr>
-<td><input name="" type="text" />Aldığınız İp</td><br>
+<td><input name="" type="text" />AldÄ±ÄŸÄ±nÄ±z Ä°p</td><br>
 </tr>
 <tr>
-<td><input name="" type="text" />Adınız</td><br>
+<td><input name="" type="text" />AdÄ±nÄ±z</td><br>
 </tr>
 <tr>
-<td><input name="" type="text" />İletişim Postası</td><br>
+<td><input name="" type="text" />Ä°letiÅŸim PostasÄ±</td><br>
 </tr>
 <tr>
 <td>Paketiniz<br></td>
@@ -50,7 +50,7 @@
 <td><h1>Sorununuz Belirtin</h1><textarea name="asd" cols="85" rows="25"></textarea></td>
 </tr>
 <tr>
-<td><button type="submit" value="Gönder">Gönder</button></td>
+<td><button type="submit" value="GÃ¶nder">GÃ¶nder</button></td>
 </tr>
 <tr>
 <td><button type="reset" value="Temizle">Temizle</button></td>
