--- a/yakup7.html
+++ b/yakup7.html
@@ -1,11 +1,11 @@
-<html>
+ï»¿<html>
 <head>
 <title> Yakup </title>
 <meta http-equiv="refresh" content="300">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="Keywords" content="Hosting,'Alan Adı'"/>
+<meta name="Keywords" content="Hosting,'Alan AdÄ±'"/>
 <meta name="Description" content="Yakup Altun."/>
 <meta name="content-language" content="tr" />
 <meta name="author" content="yakup.com">
@@ -16,72 +16,72 @@
 		<body bgcolor="white" background="https://i.hizliresim.com/e5kUmC.jpg">
 
 <center>
-<h1>Ücretler($)</h1>
+<h1>Ãœcretler($)</h1>
 <table width="800" height="300" border="5">
   <tr>
     <th scope="row">Paket1</th>
-    <td>Alan Adı Aylık </td>
+    <td>Alan AdÄ± AylÄ±k </td>
     <td>
 6.34$+KDV <br>
-(Değişkenlik Gösterebilir)
+(DeÄŸiÅŸkenlik GÃ¶sterebilir)
 </td>
   </tr>
   <tr>
     <th scope="row">Paket2</th>
-    <td>Hosting+Alan Adı</td>
+    <td>Hosting+Alan AdÄ±</td>
     <td>
 14.51$+KDV <br>
-(Değişkenlik Gösterebilir)
+(DeÄŸiÅŸkenlik GÃ¶sterebilir)
 </td>
   </tr>
   <tr>
     <th scope="row">Paket3</th>
-    <td>Barındırma (50GB)+FTP Sunucu(2GB)</td>
+    <td>BarÄ±ndÄ±rma (50GB)+FTP Sunucu(2GB)</td>
     <td>
 24.51$+KDV <br>
-(+%12 İndirim)
+(+%12 Ä°ndirim)
 </td>
   </tr>
   <tr>
     <th scope="row">Paket4</th>
-    <td>Barındırma(100GB)+FTP Sunucu(6GB)+(.com) Alan Adı</td>
+    <td>BarÄ±ndÄ±rma(100GB)+FTP Sunucu(6GB)+(.com) Alan AdÄ±</td>
     <td>
 32.14$+KDV<br>
-(+%14 İndirim)
+(+%14 Ä°ndirim)
 </td>
   </tr>
   <tr>
     <th scope="row">Paket5</th>
     <td>Hosting +Teknik Destek(1 Ay)<br>
-Sunucu Trafiği Yok + Mysql Data</td>
+Sunucu TrafiÄŸi Yok + Mysql Data</td>
     <td>
 54.81$+KDV <br>
-(Değişkenlik Gösterebilir)
+(DeÄŸiÅŸkenlik GÃ¶sterebilir)
 </td>
   </tr>
   <tr>
     <th scope="row">Paket6</th>
-    <td>Bütün Teknik Hizmetlerimiz + 200GB Barındırma<br>
-(1 Aylık Lisans Svside Koruma)
+    <td>BÃ¼tÃ¼n Teknik Hizmetlerimiz + 200GB BarÄ±ndÄ±rma<br>
+(1 AylÄ±k Lisans Svside Koruma)
 
 	</td>
     <td>
 84.96$  <br>
-(Değişkenlik Gösterebilir)
+(DeÄŸiÅŸkenlik GÃ¶sterebilir)
 </td>
   </tr>
 </table>
 </center>
 <center>
 <h1>Bilgilendirme!</h1>
-<dd>Sistemimizde hiçbir başarılı işlemin geri iadesi yoktur. Aldıktan sonra 2 gün itiraz etme hakkına sahiptir kullanıcı.</dd>
-<dd>Satışlarımız sadece dolar($) kuru üzerinden işlemektedir. Herhnagi bir paket değişikliği yapmak mümkün değildir.</dd>
-<dd>Satışlar yasal olan bireylere yapılıcaktır (+18 yaş). Sitemize Kimlik Onayı sağlanmadığı sürece girişler pasiftir.</dd>
-<dd>Sormak istediğiniz soruları lütfen ana sayfadaki <a href src="yakup9.html" target="frame1">iletişim</a> bölümünden bakınız</dd>
-<dd>Başarısız veya sorunlu işlemlerin tümünde para iadesi veya hizmet tekrarı sağlanmaktadır. Kullanıcılar açılan alan adları altında yaptığı işlemler-</dd>
-<dd>den sistem sorumlu değildir. Satın aldıktan sonra adli bütün işlemler onaylanır. Sonrasınra sorumluluk kullanıcıdadır</dd>
-<dd>Şikayetiniz veya temsilcilerimizle alakalı sorunları TEL:0543 510 59 56 Numarasına veya ayakup856@gmail.com Adresine iletin</dd>
-<iframe id="Piyasalar" src="https://www.ücretsiz.com/piyasalar.html" style="width:300px; height:70px;" frameborder=""></iframe>
+<dd>Sistemimizde hiÃ§bir baÅŸarÄ±lÄ± iÅŸlemin geri iadesi yoktur. AldÄ±ktan sonra 2 gÃ¼n itiraz etme hakkÄ±na sahiptir kullanÄ±cÄ±.</dd>
+<dd>SatÄ±ÅŸlarÄ±mÄ±z sadece dolar($) kuru Ã¼zerinden iÅŸlemektedir. Herhnagi bir paket deÄŸiÅŸikliÄŸi yapmak mÃ¼mkÃ¼n deÄŸildir.</dd>
+<dd>SatÄ±ÅŸlar yasal olan bireylere yapÄ±lÄ±caktÄ±r (+18 yaÅŸ). Sitemize Kimlik OnayÄ± saÄŸlanmadÄ±ÄŸÄ± sÃ¼rece giriÅŸler pasiftir.</dd>
+<dd>Sormak istediÄŸiniz sorularÄ± lÃ¼tfen ana sayfadaki <a href src="yakup9.html" target="frame1">iletiÅŸim</a> bÃ¶lÃ¼mÃ¼nden bakÄ±nÄ±z</dd>
+<dd>BaÅŸarÄ±sÄ±z veya sorunlu iÅŸlemlerin tÃ¼mÃ¼nde para iadesi veya hizmet tekrarÄ± saÄŸlanmaktadÄ±r. KullanÄ±cÄ±lar aÃ§Ä±lan alan adlarÄ± altÄ±nda yaptÄ±ÄŸÄ± iÅŸlemler-</dd>
+<dd>den sistem sorumlu deÄŸildir. SatÄ±n aldÄ±ktan sonra adli bÃ¼tÃ¼n iÅŸlemler onaylanÄ±r. SonrasÄ±nra sorumluluk kullanÄ±cÄ±dadÄ±r</dd>
+<dd>Åikayetiniz veya temsilcilerimizle alakalÄ± sorunlarÄ± TEL:0543 510 59 56 NumarasÄ±na veya ayakup856@gmail.com Adresine iletin</dd>
+<iframe id="Piyasalar" src="https://www.Ã¼cretsiz.com/piyasalar.html" style="width:300px; height:70px;" frameborder=""></iframe>
 
 
 		</body>
