--- a/yakup9.html
+++ b/yakup9.html
@@ -1,11 +1,11 @@
-<html>
+ï»¿<html>
 <head>
 <title> Yakup </title>
 <meta http-equiv="refresh" content="300">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="Keywords" content="Hosting,'Alan Adı'"/>
+<meta name="Keywords" content="Hosting,'Alan AdÄ±'"/>
 <meta name="Description" content="Yakup Altun."/>
 <meta name="content-language" content="tr" />
 <meta name="author" content="yakup.com">
@@ -26,19 +26,19 @@
 
 <table class="table1">
 <tr>
-<td><h1>Adı:Yakup</h1></td>
+<td><h1>AdÄ±:Yakup</h1></td>
 	</tr>
 <tr>
-<td><h1>Soyadı:Altun</h1></td>
+<td><h1>SoyadÄ±:Altun</h1></td>
 	</tr>
 <tr>
 <td><h1>Okul No:322</h1></td>
 	</tr>
 <tr>
-<td><h1>Sınıf:11-A</h1></td>
+<td><h1>SÄ±nÄ±f:11-A</h1></td>
 	</tr>
 <tr>
-<td><h1>Ders:Web Tasarım ve programlama</h1></td>
+<td><h1>Ders:Web TasarÄ±m ve programlama</h1></td>
 	</tr>
 </table>
 </center>
