--- a/yakup8.html
+++ b/yakup8.html
@@ -1,11 +1,11 @@
-<html>
+ï»¿<html>
 <head>
 <title> Yakup </title>
 <meta http-equiv="refresh" content="300">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="Keywords" content="Hosting,'Alan Adı'"/>
+<meta name="Keywords" content="Hosting,'Alan AdÄ±'"/>
 <meta name="Description" content="Yakup Altun."/>
 <meta name="content-language" content="tr" />
 <meta name="author" content="yakup.com">
@@ -31,10 +31,10 @@
 
 	</tr>
 <tr>
-<td><h1>İnstagram:yakups_altuns</h1></td>
+<td><h1>Ä°nstagram:yakups_altuns</h1></td>
 	</tr>
 	<tr>
-<td><h1>Adres:(İstanbul/Beyoğlu)Fetihtepe Mah. Çetin Sokak</h1></td>
+<td><h1>Adres:(Ä°stanbul/BeyoÄŸlu)Fetihtepe Mah. Ã‡etin Sokak</h1></td>
 	</tr>
 </table>
 </center>
